--- a/resources/css/redesign-landing.css
+++ b/resources/css/redesign-landing.css
@@ -593,6 +593,13 @@
     }
 }
 
+@media (min-width: 1024px) and (max-width: 1152px) {
+    .dlf-bm::before,
+    .dlf-bm::after {
+        display: none;
+    }
+}
+
 .dlf-bm-efficient__icon {
     display: flex;
     width: 52px;
